--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+# Needed to push images to GHCR using GITHUB_TOKEN.
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
