--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,10 +40,16 @@ jobs:
       - name: Set image name (lowercase)
         run: |
           if [ "${{ github.ref }}" = "refs/heads/main" ]; then
-            IMAGE_NAME="ghcr.io/${{ github.repository }}:latest"
-            echo "IMAGE_NAME=${IMAGE_NAME,,}" >> $GITHUB_ENV
+            # On main: use GHCR with explicit lowercase conversion
+            REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+            REPO_NAME=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
+            IMAGE_NAME="ghcr.io/${REPO_OWNER}/${REPO_NAME}:latest"
+            echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+            echo "✓ GHCR image: $IMAGE_NAME"
           else
+            # On other branches: use local image
             echo "IMAGE_NAME=pipeline:latest" >> $GITHUB_ENV
+            echo "✓ Local image: pipeline:latest"
           fi
 
       - name: Build Docker image
