Update CI/CD pipeline to use Personal Access Token for GHCR authentication

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -71,7 +71,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.PAT_GHCR }}
 
       - name: Push Docker image
         if: github.ref == 'refs/heads/main'
