--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,11 +12,10 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-# Needed to push images to GHCR using GITHUB_TOKEN.
+# Permissions for running tests, building Docker, and security scanning
 permissions:
   contents: read
-  packages: write
-  id-token: write
+  security-events: write
 
 jobs:
   build-and-deploy:
@@ -37,20 +36,9 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Set image name (lowercase)
+      - name: Set image name
         run: |
-          if [ "${{ github.ref }}" = "refs/heads/main" ]; then
-            # On main: use GHCR with explicit lowercase conversion
-            REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-            REPO_NAME=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
-            IMAGE_NAME="ghcr.io/${REPO_OWNER}/${REPO_NAME}:latest"
-            echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-            echo "✓ GHCR image: $IMAGE_NAME"
-          else
-            # On other branches: use local image
-            echo "IMAGE_NAME=pipeline:latest" >> $GITHUB_ENV
-            echo "✓ Local image: pipeline:latest"
-          fi
+          echo "IMAGE_NAME=first-pipeline:latest" >> $GITHUB_ENV
 
       - name: Build Docker image
         run: |
@@ -60,35 +48,13 @@ jobs:
         continue-on-error: true
         uses: aquasecurity/trivy-action@0.33.1
         with:
-          image-ref: ${{ env.IMAGE_NAME || 'pipeline:latest' }}
-          # Non-blocking scan; don't fail the workflow on findings.
-          exit-code: 0
+          image-ref: ${{ env.IMAGE_NAME }}
+          format: 'sarif'
+          output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
 
-      - name: Check GHCR credentials
-        if: github.ref == 'refs/heads/main'
-        run: |
-          if [ -z "${{ secrets.PAT_GHCR }}" ]; then
-            echo "HAS_CREDENTIALS=false" >> $GITHUB_ENV
-          else
-            echo "HAS_CREDENTIALS=true" >> $GITHUB_ENV
-          fi
-
-      - name: Login to GitHub Container Registry
-        if: github.ref == 'refs/heads/main' && env.HAS_CREDENTIALS == 'true'
-        uses: docker/login-action@v2
+      - name: Upload Trivy results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.PAT_GHCR }}
-
-      - name: Push Docker image
-        if: github.ref == 'refs/heads/main' && env.HAS_CREDENTIALS == 'true'
-        run: |
-          docker push "${IMAGE_NAME}"
-
-      - name: ⚠️ GHCR Push Skipped
-        if: github.ref == 'refs/heads/main' && env.HAS_CREDENTIALS == 'false'
-        run: |
-          echo "::warning::GHCR push skipped - PAT_GHCR secret not configured"
-          echo "To enable GHCR pushing, see GHCR_SETUP.md"
+          sarif_file: 'trivy-results.sarif'
