--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,68 @@
+# Node.js
 node_modules
 npm-debug.log
-.git
-.gitignore
-README.md
-.env
-.DS_Store
-.vscode
-.idea
 coverage
 dist
 build
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Git
+.git
+.gitignore
+.gitattributes
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Testing
 *.test.js
 test.js
+
+# Startup and deployment scripts (not needed in container)
+start.sh
+start.bat
+*.sh
+
+# Kubernetes and orchestration (not needed in container)
+k8s/
+helm/
+kubernetes/
+
+# Container orchestration
+docker-compose.yml
+docker-compose.*.yml
+
+# Automation scripts
+scripts/
+
+# Documentation (not needed in runtime container)
+*.md
+README*
+CHANGELOG*
+MANUAL*
+DOC*
+GUIDES*
+.github/
+
+# CI/CD
+.github/
+.gitlab-ci.yml
+.circleci/
+
+# Local development
+.cache
+.temp
+temp/
+
+# Minikube
+minikube
+.minikube/
