--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,55 @@
+# Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# IDE and Editor
+.vscode
+.idea
+*.swp
+*.swo
+*~
+.DS_Store
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Build outputs
+dist/
+build/
+coverage/
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+.cache
+.temp
+temp/
+
+# Minikube
+minikube
+.minikube/
+
+# Local development
 PRE_COMMIT_CHECK.md
+
+# Docker volumes
+*.sock
+
+# Node testing
+.nyc_output/
+nyc_coverage/
+
+chmod +x start.sh
+chmod +x start.bat
+# Package lock (optional - uncomment if you prefer to commit it)
+# package-lock.json
