--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,13 +46,12 @@ jobs:
 
       - name: Set image name (lowercase)
         run: |
+          REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          REPO_NAME=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
           if [ "${{ github.ref }}" = "refs/heads/main" ]; then
             # On main: use GHCR with explicit lowercase conversion
-            REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-            REPO_NAME=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
-            IMAGE_NAME="ghcr.io/${REPO_OWNER}/${REPO_NAME}:latest"
-            echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-            echo "✓ GHCR image: $IMAGE_NAME"
+            echo "IMAGE_NAME=ghcr.io/${REPO_OWNER}/${REPO_NAME}:latest" >> $GITHUB_ENV
+            echo "✓ GHCR image: ghcr.io/${REPO_OWNER}/${REPO_NAME}:latest"
           else
             # On other branches: use local image
             echo "IMAGE_NAME=pipeline:latest" >> $GITHUB_ENV
@@ -60,20 +59,24 @@ jobs:
           fi
 
       - name: Build Docker image
+        id: docker_build
         run: |
-          docker build -t "${IMAGE_NAME}" .
+          IMAGE_TAG="$IMAGE_NAME"
+          docker build -t "${IMAGE_TAG}" .
+          echo "image_tag=${IMAGE_TAG}" >> $GITHUB_OUTPUT
 
-      - name: Run Trivy security scan
+      - name: Run Trivy security scan (Main branch only)
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         continue-on-error: true
         uses: aquasecurity/trivy-action@0.33.1
         with:
-          image-ref: ${{ env.IMAGE_NAME }}
+          image-ref: ${{ steps.docker_build.outputs.image_tag }}
           format: sarif
           output: trivy-results.sarif
           severity: CRITICAL,HIGH
 
       - name: Upload Trivy results to GitHub Security
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: github/codeql-action/upload-sarif@v2
-        if: always()
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: trivy-results.sarif
