--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ chmod +x start.sh
 chmod +x start.bat
 # Package lock (optional - uncomment if you prefer to commit it)
 # package-lock.json
+
+chmod +x shutdown.sh
+chmod +x shutdown.bat
